fixed addon mobile version layout and thank you page layout

--- a/src/components/pages/Addons.module.css
+++ b/src/components/pages/Addons.module.css
@@ -1,3 +1,5 @@
-.addon-section {
-  margin-left: 35rem;
+@media screen and (min-width: 760px) {
+  .addon-section {
+    margin-left: 35rem;
+  }
 }
